--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html, body {
 .search-bar {
   top: 0;
   left: 0;
-  width: 100%;
+  width: auto;
   padding: 10px;
   background-color: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -22,6 +22,7 @@ html, body {
 .search-results {
   list-style: none;
   padding: 0;
+  width: 100%;
   margin: 10px 0 0 0;
   max-height: 90vh; 
   overflow-y: auto; 
