Set searchbar to 30vw

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@ html, body {
   padding: 5px;
   border-radius: 1px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 30vw; 
 }
+
 
 .map-search-results {
   list-style: none;
