Blank searchbar changes

--- a/css/style.css
+++ b/css/style.css
@@ -64,5 +64,28 @@ html, body {
 
 
 
+/* Adjust font size and h values for small screens */
+@media screen and (max-width: 600px) {
+  .map-search-results {
+    font-size: 10px;
+  }
+}
+
+/* Adjust font size and h values for medium screens */
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  .map-search-results {
+    font-size: 14px;
+  }
+}
+
+/* Adjust font size and h values for large screens */
+@media screen and (min-width: 1025px) {
+  .map-search-results {
+    font-size: 15px;
+  }
+}
+
+
+
 
 
