--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html, body {
 
 .map-preload {
   position: fixed;
-  bottom: 50px;
+  bottom: 40%;
   left: 10px;
   z-index: 1000;
   background-color: white;
@@ -20,6 +20,10 @@ html, body {
   overflow-y: auto;
   overflow-x: hidden;
   padding: 1vw; 
+}
+
+.map-preload-item{
+  padding:10px;
 }
 
 
