--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,11 @@ html, body {
   z-index: 1000;
   background-color: white;
   width: 30vw; 
-  height: 30vw; 
+  height: 40%; 
   overflow-y: auto;
   overflow-x: hidden;
   padding: 1vw; 
   max-height:30vw;
-  
 }
 
 .map-preload::-webkit-scrollbar {
