--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ html, body {
   height: 40vw; 
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 1vw; 
+  padding: 5px; 
+  padding-top: 12px;
   max-height:60vw;
 }
 
@@ -28,7 +29,12 @@ html, body {
 }
 
 .map-preload-item{
-  padding:10px;
+  padding:.5vw;
+}
+
+.map-recent-records-header{
+  font-size: 24px;
+  text-align: center;
 }
 
 
@@ -107,11 +113,16 @@ html, body {
 }
 
 
+@media screen and (max-width: 600px){.map-recent-records-header {
+  font-size: 16px;}
+}
+
+
 @media screen and (max-width: 600px) {
   .map-search-results,
   .map-reset-btn,
   .map-preload,
-  .map-search-reset {
+  .map-search-reset{
     font-size: 10px;
   }
 }
@@ -120,7 +131,7 @@ html, body {
   .map-search-results,
   .map-reset-btn,
   .map-preload,
-  .map-search-reset {
+  .map-search-reset{
     font-size: 14px;
   }
 }
@@ -133,8 +144,3 @@ html, body {
     font-size: 15px;
   }
 }
-
-
-
-
-
