Added media condition styles for map-preload

--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,38 @@ html, body {
   overflow-x: hidden;
   padding: 5px; 
   padding-top: 12px;
-  max-height:60vw;
+  max-height: 60vw;
 }
+
+
+/* Hide on small screens (phones) */
+@media (max-width: 576px) {
+  .map-preload {
+    display: none;
+  }
+}
+
+/* Hide on medium screens (tablets) */
+@media (min-width: 577px) and (max-width: 992px) {
+  .map-preload {
+    display: none;
+  }
+}
+
+/* Hide on large screens (small laptops/desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+  .map-preload {
+    display: none;
+  }
+}
+
+/* Hide on extra-large screens (large desktops) */
+@media (min-width: 1201px) {
+  .map-preload {
+    display: none;
+  }
+}
+
 
 .map-preload::-webkit-scrollbar {
   display: none; /* Hide the scrollbar */
