Added info button

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,19 @@ html, body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
+.map-info-btn {
+  position: fixed;
+  top: 420px;
+  left: 10px;
+  z-index: 1000;
+  background-color: white;
+  width: 70px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  border-inline: 5px solid rgba(0, 0, 0, 0.2); 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
 
 .map-search-reset{
   color: grey;
