Added total number of trees planted

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ html, body {
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 30vw;
+  width: 20vw;
   overflow-y: auto;
   overflow-x: hidden;
   scroll-behavior: smooth;
@@ -184,7 +184,8 @@ html, body {
   .map-search-results,
   .map-reset-btn,
   .map-preload,
-  .map-search-reset{
+  .map-search-reset,
+  .total-trees-planted-date{
     font-size: 10px;
   }
 }
@@ -193,7 +194,8 @@ html, body {
   .map-search-results,
   .map-reset-btn,
   .map-preload,
-  .map-search-reset{
+  .map-search-reset,
+  .total-trees-planted-date{
     font-size: 14px;
   }
 }
@@ -202,7 +204,17 @@ html, body {
   .map-search-results,
   .map-reset-btn,
   .map-preload,
-  .map-search-reset {
+  .map-search-reset,
+  .total-trees-planted-date{
     font-size: 15px;
   }
+}
+
+.total-trees-planted{
+  font-size: 40px;
+  text-align: center;
+}
+
+.total-trees-planted-date{
+  text-align: center;
 }
