Dashboard card changes

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,8 @@ html, body {
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 20vw;
+  width: 200px;
+  max-height: 30;
   overflow-y: auto;
   overflow-x: hidden;
   scroll-behavior: smooth;
