Changed map-recent-record-header into map-recent-record-item

--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,8 @@ html, body {
   padding:.5vw;
 }
 
-.map-recent-records-header{
-  font-size: 24px;
+.map-recent-records-item{
+  font-size: 14px;
   text-align: center;
 }
 
