Retained map-search for map-search btn

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ html, body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.map-dash-btn {
+.map-search-btn {
   position: fixed;
   top: 360px;
   left: 10px;
