Added fixed height on map-dash-bar

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ html, body {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 150px;
+  height: 350;
   max-height: 30;
   overflow-y: auto;
   overflow-x: hidden;
